<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sistema"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/seleccionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/metodo_calificar"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Practicat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practicat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/practicat1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/practicat1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Practicat" />
        <TextView
            android:id="@+id/practicat2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/practicat2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practicat1" />

        <EditText
            android:id="@+id/nota1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/practicat1"
            app:layout_constraintTop_toBottomOf="@+id/Promediot"
            />
        <EditText
            android:id="@+id/nota2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/practicat2"
            app:layout_constraintTop_toBottomOf="@+id/nota1" />
        <TextView
            android:id="@+id/Promediot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prom 0.0"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/Practicat" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/separador" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Practical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practical"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/practical1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/practical1"
            app:layout_constraintTop_toBottomOf="@+id/Practical" />

        <TextView
            android:id="@+id/practical2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/practical2"
            app:layout_constraintTop_toBottomOf="@+id/practical1" />

        <TextView
            android:id="@+id/practical3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/practicatl3"
            app:layout_constraintTop_toBottomOf="@+id/practical2" />

        <TextView
            android:id="@+id/practical4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/practical4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practical3" />

        <TextView
            android:id="@+id/Promedio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prom 0.0"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/Practical" />
        <EditText
            android:id="@+id/notal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/practical1"
            app:layout_constraintTop_toBottomOf="@+id/Promedio1" />

        <EditText
            android:id="@+id/notal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/practical2"
            app:layout_constraintTop_toBottomOf="@+id/notal1" />
        <EditText
            android:id="@+id/notal3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/practical3"
            app:layout_constraintTop_toBottomOf="@+id/notal2" />

        <EditText
            android:id="@+id/notal4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/practical4"
            app:layout_constraintTop_toBottomOf="@+id/notal3" />


    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/PromedioM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="Promedio 0.0"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/mesanje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:text=" "
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="20sp"
            android:text="Calcular"
            />
    </LinearLayout>
</LinearLayout>